tarmac/new_pattern24/kubernetes/platform/automation/argocd/overlays/environments/devops/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: k8s-ingress
    alb.ingress.kubernetes.io/group.name: k8s-ingress
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig":
      {"Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS13-1-3-2021-06
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}, {"HTTP": 80}]'
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/tags: Environment=devops,Team=devops
    alb.ingress.kubernetes.io/subnets: subnet-0aefe6745a75e26a0, subnet-051e9aa32c37b5ce8, subnet-05478f24582d1ad16
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:964608896914:certificate/8f4b2498-b7f7-4d04-8659-fa3a229ca283
    external-dns.alpha.kubernetes.io/hostname: argocd.devops.cliniciannexus.com
spec:
  ingressClassName: alb
  rules:
  - host: argocd.devops.cliniciannexus.com
    http:
      paths:
      - backend:
          service:
            name: argocd-server
            port:
              name: https
        path: /
        pathType: Prefix
